[gd_scene load_steps=4 format=3 uid="uid://bkp77x1seytg7"]

[ext_resource type="Script" path="res://addons/ggs/editor/category_panel/category_panel.gd" id="1_yu7o4"]
[ext_resource type="Texture2D" uid="uid://ve54bl3r7ljc" path="res://addons/ggs/assets/reload.svg" id="2_so3ov"]
[ext_resource type="Script" path="res://addons/ggs/editor/category_panel/category_list.gd" id="4_xqs08"]

[node name="CategoryPanel" type="Control"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yu7o4")

[node name="MainCtnr" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="MainCtnr"]
layout_mode = 2

[node name="NewCatField" type="LineEdit" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Category..."
clear_button_enabled = true

[node name="VSep" type="VSeparator" parent="MainCtnr/TopBar"]
layout_mode = 2

[node name="ReloadBtn" type="Button" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Reload List"
icon = ExtResource("2_so3ov")
flat = true
icon_alignment = 1

[node name="CategoryList" type="ItemList" parent="MainCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
script = ExtResource("4_xqs08")
